# oss-sustain-guard

./: .oss-sustain-guard.toml  .oss-sustain-guard.toml.example  .pre-commit-config.yaml  .pre-commit-hooks.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  GITLAB_MIGRATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  Makefile  README.md  ROADMAP.md  action-entrypoint.sh  action.yml  index.html  mise.toml  mkdocs.yml  pyproject.toml  sitemap.xml  test_all_commands.sh
.claude/skills/add-new-metric/: SKILL.md
.claude/skills/adding-new-metric/: SKILL.md
.claude/skills/checking-skill-best-practices/: SKILL.md
.claude/skills/release-process/: SKILL.md
.github/: copilot-instructions.md
.github/PULL_REQUEST_TEMPLATE/: contribution.md
.github/workflows/: auto-detect-deps.yml  build-action-image.yml  check-dependencies-test.yml  check-dependencies.yml  check-packages.yml  docs.yml  publish.yml  test-external-tools.yml  test.yml  update_database.yml  validate-contributions.yml
CHAOSS_METRICS_ALIGNMENT_VALIDATION/: index.html
DATABASE_SCHEMA/: index.html
EXCLUDE_PACKAGES_GUIDE/: index.html
GETTING_STARTED/: index.html
GITHUB_ACTIONS_GUIDE/: index.html
GRATITUDE_VENDING_MACHINE/: index.html
PRE_COMMIT_INTEGRATION/: index.html
RECURSIVE_SCANNING_GUIDE/: index.html
SCHEMA_VERSION_MANAGEMENT/: index.html
SCORING_PROFILES_GUIDE/: index.html
TREND_ANALYSIS_GUIDE/: index.html
TROUBLESHOOTING_FAQ/: index.html
builder/: build_db.py  fallback_packages.py
cloudflare/src/: index.js
data/: database.json
data/archive/2025-12-08/: javascript.json  php.json  python.json  ruby.json  rust.json
data/archive/2025-12-09/: javascript.json  python.json  ruby.json  rust.json
data/archive/2025-12-11/: python.json
data/archive/2025-12-12/: python.json
data/contributions/: README.md
data/latest/: csharp.json  java.json  java.libraries_io.meta.json  kotlin.json  php.libraries_io.meta.json  python.json  ruby.json  rust.json
docs/: BUILT_IN_METRICS_GUIDE.md  CACHING_GUIDE.md  CHAOSS_METRICS_ALIGNMENT_VALIDATION.md  COMMUNITY_CONTRIBUTION_ARCHITECTURE.md  COMMUNITY_CONTRIBUTION_GUIDE.md  CUSTOM_METRICS_GUIDE.md  DATABASE_SCHEMA.md  DEPENDENCY_ANALYSIS_GUIDE.md  DEPENDENCY_GRAPH_VISUALIZATION.md  DIFFERENCES_FROM_SIMILAR_INITIATIVES.md  EXCLUDE_PACKAGES_GUIDE.md  GETTING_STARTED.md  GITHUB_ACTIONS_GUIDE.md  GRATITUDE_VENDING_MACHINE.md  PRE_COMMIT_INTEGRATION.md  RECURSIVE_SCANNING_GUIDE.md  SCHEMA_VERSION_MANAGEMENT.md  SCORING_PROFILES_GUIDE.md  TREND_ANALYSIS_CACHING_GUIDE.md  TREND_ANALYSIS_GUIDE.md  TROUBLESHOOTING_FAQ.md  index.md
docs/assets/: report_template.html
examples/contributions/: README.md  example-contribution.json
examples/demo/: demo_results.json
oss_sustain_guard/: cache.py  cli.py  config.py  contribution_validator.py  core.py  dependency_graph.py  dependency_tree_resolver.py  http_client.py  librariesio.py  remote_cache.py  trend.py
oss_sustain_guard/assets/: report_template.html
oss_sustain_guard/cli_utils/: display.py  helpers.py  output.py
oss_sustain_guard/commands/: check.py  graph.py  gratitude.py  trace.py
oss_sustain_guard/dependency_parsers/: __init__.py  base.py  resolver_helpers.py
oss_sustain_guard/dependency_parsers/go/: modsum.py
oss_sustain_guard/dependency_parsers/javascript/: bun.py  deno.py  npm.py  pnpm.py  shared.py  yarn.py
oss_sustain_guard/external_tools/: __init__.py  csharp_tools.py  dart_tools.py  go_tools.py  java_tools.py  javascript_tools.py  php_tools.py  python_tools.py
oss_sustain_guard/metrics/: __init__.py  attraction.py  base.py  bus_factor.py  ci_status.py  code_of_conduct.py  community_health.py  dependents_count.py  documentation_presence.py  fork_activity.py  funding.py  issue_resolution_duration.py  license_clarity.py  maintainer_drain.py  merge_velocity.py  organizational_diversity.py  pr_acceptance_ratio.py  pr_merge_speed.py  pr_responsiveness.py  project_popularity.py  release_cadence.py  retention.py  review_health.py  security_posture.py  single_maintainer_load.py  stale_issue_ratio.py  zombie_status.py
oss_sustain_guard/resolvers/: __init__.py  base.py  csharp.py  dart.py  elixir.py  go.py  haskell.py  java.py  javascript.py  kotlin.py  perl.py  php.py  python.py  r.py  ruby.py  rust.py  swift.py
oss_sustain_guard/vcs/: __init__.py  base.py  github.py  gitlab.py
oss_sustain_guard/visualization/: __init__.py  plotly_visualizer.py
search/: search_index.json
tests/: test_bot_detection.py  test_cache.py  test_cli_cache_commands.py  test_cli_display.py  test_cli_helpers.py  test_cli_multi.py  test_cli_parallel.py  test_cli_trend.py  test_config.py  test_contribution.py  test_core.py  test_core_helpers.py  test_dependency_graph.py  test_dependents.py  test_exclusion_patterns.py  test_fixtures_integration.py  test_resolver.py  test_root_dir_option.py  test_visualization.py
tests/fixtures/: README.md  build.gradle.kts  pom.xml
tests/fixtures/csharp/: mise.toml
tests/metrics/: test_attraction.py  test_base.py  test_bus_factor.py  test_ci_status.py  test_code_of_conduct.py  test_community_health.py  test_dependents_count.py  test_documentation_presence.py  test_fork_activity.py  test_funding.py  test_issue_resolution_duration.py  test_license_clarity.py  test_maintainer_drain.py  test_merge_velocity.py  test_metric_registry.py  test_organizational_diversity.py  test_pr_acceptance_ratio.py  test_pr_merge_speed.py  test_pr_responsiveness.py  test_project_popularity.py  test_release_cadence.py  test_retention.py  test_review_health.py  test_security_posture.py  test_single_maintainer_load.py  test_stale_issue_ratio.py  test_zombie_status.py
tests/resolvers/: test_csharp.py  test_dart.py  test_elixir.py  test_go.py  test_haskell.py  test_java.py  test_javascript.py  test_perl.py  test_php.py  test_python.py  test_r.py  test_registry.py  test_ruby.py  test_rust.py  test_swift.py
tests/vcs/: __init__.py  test_base.py  test_github.py  test_gitlab.py
(+22 files in other folders)
