[project]
name = "oss-sustain-guard"
version = "0.14.0"
description = "Sustainability signals for OSS dependencies across ecosystems"
readme = "README.md"
requires-python = ">=3.10,<3.15"
authors = [
  {name = "onukura", email = "26293997+onukura@users.noreply.github.com"},
]
license = {file = "LICENSE"}
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "python-dotenv>=1.2.1",
    "rich>=14.2.0",
    "typer>=0.20.0",
    "httpx>=0.28.1",
    "tomli>=2.0.0",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=6.0.0",
    "ruff>=0.14.9",
    "prek>=0.2.22",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.0",
]

[project.urls]
Repository = "https://github.com/onukura/oss-sustain-guard"
Documentation = "https://onukura.github.io/oss-sustain-guard/"
Releases = "https://github.com/onukura/oss-sustain-guard/releases"
Issues = "https://github.com/onukura/oss-sustain-guard/issues"

[project.scripts]
oss-guard = "oss_sustain_guard.cli:app"
os4g = "oss_sustain_guard.cli:app"

[project.entry-points."oss_sustain_guard.metrics"]
bus_factor = "oss_sustain_guard.metrics.bus_factor:METRIC"
maintainer_drain = "oss_sustain_guard.metrics.maintainer_drain:METRIC"
recent_activity = "oss_sustain_guard.metrics.zombie_status:METRIC"
merge_velocity = "oss_sustain_guard.metrics.merge_velocity:METRIC"
issue_resolution_duration = "oss_sustain_guard.metrics.issue_resolution_duration:METRIC"
funding = "oss_sustain_guard.metrics.funding:METRIC"
release_cadence = "oss_sustain_guard.metrics.release_cadence:METRIC"
security_posture = "oss_sustain_guard.metrics.security_posture:METRIC"
contributor_attraction = "oss_sustain_guard.metrics.attraction:METRIC"
contributor_retention = "oss_sustain_guard.metrics.retention:METRIC"
review_health = "oss_sustain_guard.metrics.review_health:METRIC"
documentation_presence = "oss_sustain_guard.metrics.documentation_presence:METRIC"
code_of_conduct = "oss_sustain_guard.metrics.code_of_conduct:METRIC"
pr_acceptance_ratio = "oss_sustain_guard.metrics.pr_acceptance_ratio:METRIC"
organizational_diversity = "oss_sustain_guard.metrics.organizational_diversity:METRIC"
fork_activity = "oss_sustain_guard.metrics.fork_activity:METRIC"
project_popularity = "oss_sustain_guard.metrics.project_popularity:METRIC"
license_clarity = "oss_sustain_guard.metrics.license_clarity:METRIC"
pr_responsiveness = "oss_sustain_guard.metrics.pr_responsiveness:METRIC"
community_health = "oss_sustain_guard.metrics.community_health:METRIC"
ci_status = "oss_sustain_guard.metrics.ci_status:METRIC"
stale_issue_ratio = "oss_sustain_guard.metrics.stale_issue_ratio:METRIC"
pr_merge_speed = "oss_sustain_guard.metrics.pr_merge_speed:METRIC"
maintainer_load_distribution = "oss_sustain_guard.metrics.single_maintainer_load:METRIC"
dependents_count = "oss_sustain_guard.metrics.dependents_count:METRIC"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["oss_sustain_guard"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["oss_sustain_guard"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@abstract",
]
precision = 2
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"

[tool.ruff]
include = ["pyproject.toml", "oss_sustain_guard/**/*.py", "tests/**/*.py", "builder/**/*.py"]
target-version = "py313"
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
  "E", # pycodestyle errors
  "W", # pycodestyle warnings
  "F", # pyflakes
  "I",  # isort
  "C", # flake8-comprehensions
  "B", # flake8-bugbear
]
ignore = [
  "C901", # complex-structure (C901)
  "E203", # Whitespace before ':' (E203)
  "E501", # Line too long (82 &gt; 79 characters) (E501)
  "F811", # Redefinition of unused name from line n (F811)
  "E741", # Do not define classes named 'I', 'O', or 'l' (E742)
  "E266", # too many leading '#' for block comment (E266)
  "PIE",  # flake8-pie (PIE)
  "F601", # multi-value-repeated-key-literal (F601)
  "E721", # type-comparison (E721)
  "B008", # Do not perform function call `Body` in argument defaults
]

[tool.ruff.lint.isort]
combine-as-imports = true
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
split-on-trailing-comma = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.oss-sustain-guard]
# Example: packages to exclude from sustainability checks
# exclude = ["some-internal-package", "legacy-dependency"]

[tool.oss-sustain-guard.cache]

# Cache directory (default: ~/.cache/oss-sustain-guard)
# Supports environment variable expansion: ~, $HOME, etc.
# directory = "~/.cache/oss-sustain-guard"

# Cache TTL (Time To Live) in seconds (default: 604800 = 7 days)
# After this period, cached data is considered stale and will be refetched
# ttl_seconds = 604800

# Enable or disable caching (default: true)
# When disabled, data is always fetched fresh from GitHub/local sources
# enabled = true
